# bg3

./: Cargo.toml  README.md
dialoguev/: Cargo.toml
dialoguev/src/: main.rs
loca/: Cargo.toml
loca/src/: lib.rs  main.rs
ls/: Cargo.toml  README.md
ls/src/: game.rs  lib.rs  main.rs  mod_resources.rs  resource.rs
ls/src/pak/: common.rs  mod.rs
ls/src/story/: mod.rs
ls/src/story/compiler/: compilation_context.rs  mod.rs
lsf/: Cargo.toml  README.md  output.txt
lsf/src/: attr.rs  decompress.rs  lib.rs  main.rs  util.rs
lsf/src/lsx/: mod.rs
lsj/: Cargo.toml
lsj/src/: lib.rs  main.rs  util.rs  val.rs
mod-mgr/: Cargo.toml  README.md
mod-mgr-lib/: Cargo.toml
mod-mgr-lib/src/: config.rs  lib.rs  mod_data.rs  settings.rs
mod-mgr-lib/src/util/: divinity_registry_helper.rs  mod.rs
mod-mgr/src/: app_keys.rs  main.rs  main_view.rs  mod_table_view.rs  settings_view.rs  tab_view.rs  table.rs  ui_mod_data.rs  util.rs  view_util.rs
mod-mgr/src/resources/: default_paths.rs  ignored_mods.rs  mod.rs
uip/: Cargo.toml  README.md
uip/src/: basic.rs  binding.rs  interaction.rs  lib.rs  resources.rs
uip/src/larian/: mod.rs
