[package]
name = "mod-mgr-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
# TODO: Once steamlocate releases a stable version, switch to that.  
# We're using this because the current release depends on a lib which itself depends on a very
# old version of nom that will break in some future Rust version.
steamlocate = "2.0.0-alpha.0"
