[package]
name = "mod-mgr"
version = "0.1.0"
edition = "2021"
authors = ["MinusGix"]
description = "A reimplementation of LaughingLeader's BG3 Mod Manager in Rust"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
dirs = "5.0.1"
floem = { git = "https://github.com/lapce/floem", rev = "4b3913fb6db83bae94a5cab8d2dbc579d52a584a" }
# TODO: get rid of it
im = "15.1.0"
# floem = { path = "/run/media/minus/Kairos/Code/Rust/floem/" }
mod-mgr-lib = { path = "../mod-mgr-lib" }
serde_json = "1.0.104"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
